@@ -12,8 +12,11 @@ import java.math.BigDecimal;
 import java.util.List;
 import java.util.stream.Collectors;
 
+import org.springframework.transaction.annotation.Transactional;
+
 @Service
 @RequiredArgsConstructor
+@Transactional
 public class ProductService {
 
     private final ProductRepository productRepository;
@@ -35,17 +38,18 @@ public class ProductService {
                 : Sort.by(sortBy).ascending();
 
         Page<Product> products = productRepository.findAll(
-                ProductSpecification.filter(keyword, minPrice, maxPrice, categoryIds, brandIds, inStock, attributeValueIds),
+                ProductSpecification.filter(keyword, minPrice, maxPrice, categoryIds, brandIds, inStock,
+                        attributeValueIds),
                 PageRequest.of(page, size, sort));
 
         // Convert Page<Product> → Page<ProductResponse>
         return products.map(product -> {
             List<ProductVariant> variants = product.getVariants().stream()
                     .filter(ProductVariant::getIsActive)
-                    .toList();
+                    .collect(Collectors.toList());
             List<String> images = product.getImages().stream()
                     .map(ProductImage::getUrl)
-                    .toList();
+                    .collect(Collectors.toList());
             return mapToResponse(product, variants, images);
         });
     }
@@ -56,10 +60,10 @@ public class ProductService {
 
         List<ProductVariant> variants = product.getVariants().stream()
                 .filter(ProductVariant::getIsActive)
-                .toList();
+                .collect(Collectors.toList());
         List<String> images = product.getImages().stream()
                 .map(ProductImage::getUrl)
-                .toList();
+                .collect(Collectors.toList());
 
         return mapToResponse(product, variants, images);
     }
@@ -94,6 +98,10 @@ public class ProductService {
                 ProductVariant variant = new ProductVariant();
                 variant.setProduct(product);
                 variant.setSku(vr.getSku());
+
+                // Validate giá trước khi gán
+                validatePrices(vr);
+
                 variant.setPrice(vr.getPrice());
                 variant.setDiscountPrice(vr.getDiscountPrice());
                 // Nếu không có compareAtPrice thì lấy từ price (Giá gốc)
@@ -102,12 +110,13 @@ public class ProductService {
                 variant.setStock(vr.getStock());
                 variant.setImageUrl(vr.getImageUrl());
                 variant.setIsActive(true);
-                
+
                 if (vr.getAttributeValueIds() != null && !vr.getAttributeValueIds().isEmpty()) {
-                    List<AttributeValue> attributeValues = attributeValueRepository.findAllById(vr.getAttributeValueIds());
+                    List<AttributeValue> attributeValues = attributeValueRepository
+                            .findAllById(vr.getAttributeValueIds());
                     variant.setAttributeValues(attributeValues);
                 }
-                
+
                 variantRepository.save(variant);
             }
         }
@@ -145,30 +154,51 @@ public class ProductService {
         }
 
         if (request.getVariants() != null) {
-            // Đánh dấu tất cả variant cũ là inactive
-            List<ProductVariant> oldVariants = variantRepository.findByProductId(id);
-            oldVariants.forEach(v -> v.setIsActive(false));
-            variantRepository.saveAll(oldVariants);
+            List<ProductVariant> currentVariants = variantRepository.findByProductId(id);
+            java.util.Set<Long> updatedIds = new java.util.HashSet<>();
 
-            // Tạo các variant mới
             for (ProductRequest.VariantRequest vr : request.getVariants()) {
-                ProductVariant variant = new ProductVariant();
+                ProductVariant variant;
+                if (vr.getId() != null) {
+                    variant = currentVariants.stream()
+                            .filter(v -> v.getId().equals(vr.getId()))
+                            .findFirst()
+                            .orElse(new ProductVariant()); // Fallback if ID is invalid
+                    updatedIds.add(vr.getId());
+                } else {
+                    variant = new ProductVariant();
+                }
+
                 variant.setProduct(product);
                 variant.setSku(vr.getSku());
-                variant.setPrice(vr.getPrice());
+
+                // Validate giá trước khi gán
+                validatePrices(vr);
+
                 variant.setDiscountPrice(vr.getDiscountPrice());
+                // Sửa logic: Lấy từ request chứ không ép bằng price
                 variant.setCompareAtPrice(vr.getCompareAtPrice() != null ? vr.getCompareAtPrice() : vr.getPrice());
+                variant.setPrice(vr.getPrice());
                 variant.setCostPrice(vr.getCostPrice());
                 variant.setStock(vr.getStock());
                 variant.setImageUrl(vr.getImageUrl());
                 variant.setIsActive(true);
 
                 if (vr.getAttributeValueIds() != null && !vr.getAttributeValueIds().isEmpty()) {
-                    List<AttributeValue> attributeValues = attributeValueRepository.findAllById(vr.getAttributeValueIds());
+                    List<AttributeValue> attributeValues = attributeValueRepository
+                            .findAllById(vr.getAttributeValueIds());
                     variant.setAttributeValues(attributeValues);
                 }
 
                 variantRepository.save(variant);
+            }
+
+            // Mark variants not in request as inactive
+            for (ProductVariant old : currentVariants) {
+                if (!updatedIds.contains(old.getId())) {
+                    old.setIsActive(false);
+                    variantRepository.save(old);
+                }
             }
         }
 
@@ -181,7 +211,8 @@ public class ProductService {
         try {
             productRepository.deleteById(id);
         } catch (Exception e) {
-            throw new RuntimeException("Không thể xóa sản phẩm do có dữ liệu liên quan (ví dụ: đơn hàng). Vui lòng ẩn sản phẩm thay vì xóa.");
+            throw new RuntimeException(
+                    "Không thể xóa sản phẩm do có dữ liệu liên quan (ví dụ: đơn hàng). Vui lòng ẩn sản phẩm thay vì xóa.");
         }
     }
 
@@ -191,44 +222,60 @@ public class ProductService {
                 .map(product -> {
                     List<ProductVariant> variants = product.getVariants().stream()
                             .filter(ProductVariant::getIsActive)
-                            .toList();
+                            .collect(Collectors.toList());
                     List<String> images = product.getImages().stream()
                             .map(ProductImage::getUrl)
-                            .toList();
+                            .collect(Collectors.toList());
                     return mapToResponse(product, variants, images);
                 })
-                .toList();
+                .collect(Collectors.toList());
     }
+
     public List<ProductResponse> getNewProducts(int limit) {
         return productRepository.findAllByOrderByCreatedAtDesc(PageRequest.of(0, limit))
                 .stream()
                 .map(product -> {
                     List<ProductVariant> variants = product.getVariants().stream()
                             .filter(ProductVariant::getIsActive)
-                            .toList();
+                            .collect(Collectors.toList());
                     List<String> images = product.getImages().stream()
                             .map(ProductImage::getUrl)
-                            .toList();
+                            .collect(Collectors.toList());
                     return mapToResponse(product, variants, images);
                 })
-                .toList();
+                .collect(Collectors.toList());
     }
+
+    public List<ProductResponse> getFlashSale(int limit) {
+        Page<Product> products = productRepository.findFlashSales(PageRequest.of(0, limit));
+        return products.stream()
+                .map(product -> {
+                    List<ProductVariant> variants = product.getVariants().stream()
+                            .filter(ProductVariant::getIsActive)
+                            .collect(Collectors.toList());
+                    List<String> images = product.getImages().stream()
+                            .map(ProductImage::getUrl)
+                            .collect(Collectors.toList());
+                    return mapToResponse(product, variants, images);
+                })
+                .collect(Collectors.toList());
+    }
+
     public List<ProductResponse> getBestSelling(int limit) {
 
         Page<Product> products = productRepository.findBestSelling(
-                PageRequest.of(0, limit)
-        );
+                PageRequest.of(0, limit));
         return products.map(product -> {
 
             // lọc variant active
             List<ProductVariant> variants = product.getVariants().stream()
                     .filter(ProductVariant::getIsActive)
-                    .toList();
+                    .collect(Collectors.toList());
 
             // lấy danh sách ảnh
             List<String> images = product.getImages().stream()
                     .map(ProductImage::getUrl)
-                    .toList();
+                    .collect(Collectors.toList());
 
             return mapToResponse(product, variants, images);
 
@@ -237,7 +284,7 @@ public class ProductService {
 
     private ProductResponse mapToResponse(Product product, List<ProductVariant> variants, List<String> images) {
         BigDecimal priceMin = variants.stream()
-                .map(ProductVariant::getPrice)
+                .map(ProductVariant::getEffectivePrice)
                 .min(BigDecimal::compareTo)
                 .orElse(BigDecimal.ZERO);
 
@@ -252,7 +299,7 @@ public class ProductService {
         res.setThumbnail(images.isEmpty() ? null : images.get(0));
         res.setImages(images);
         res.setPriceMin(priceMin);
-        res.setVariants(variants.stream().map(this::mapVariant).toList());
+        res.setVariants(variants.stream().map(this::mapVariant).collect(Collectors.toList()));
         res.setAverageRating(product.getAverageRating());
         res.setTotalReviews(product.getTotalReviews());
         res.setTotalSold(product.getTotalSold());
@@ -280,7 +327,7 @@ public class ProductService {
                 avr.setName(av.getAttribute().getName());
                 avr.setValue(av.getValue());
                 return avr;
-            }).toList());
+            }).collect(Collectors.toList()));
         }
 
         return vr;
@@ -295,15 +342,13 @@ public class ProductService {
             // 1. Kiểm tra phải nhỏ hơn giá bán
             if (request.getDiscountPrice().compareTo(variant.getPrice()) >= 0) {
                 throw new RuntimeException(
-                        "Giá sale phải nhỏ hơn giá bán (" + variant.getPrice() + ")"
-                );
+                        "Giá sale phải nhỏ hơn giá bán (" + variant.getPrice() + ")");
             }
 
             // 2. Kiểm tra phải lớn hơn giá nhập
             if (request.getDiscountPrice().compareTo(variant.getCostPrice()) <= 0) {
                 throw new RuntimeException(
-                        "Giá sale phải lớn hơn giá nhập (" + variant.getCostPrice() + ")"
-                );
+                        "Giá sale phải lớn hơn giá nhập (" + variant.getCostPrice() + ")");
             }
         }
         variant.setDiscountPrice(request.getDiscountPrice());
@@ -323,10 +368,10 @@ public class ProductService {
                 .map(product -> {
                     List<ProductVariant> variants = product.getVariants().stream()
                             .filter(ProductVariant::getIsActive)
-                            .toList();
+                            .collect(Collectors.toList());
                     List<String> images = product.getImages().stream()
                             .map(ProductImage::getUrl)
-                            .toList();
+                            .collect(Collectors.toList());
                     return mapToResponse(product, variants, images);
                 });
     }
@@ -335,8 +380,21 @@ public class ProductService {
         SaleResponse res = new SaleResponse();
         res.setVariantId(variant.getId());
         res.setSku(variant.getSku());
+        res.setImageUrl(variant.getImageUrl());
         res.setProductName(variant.getProduct().getName());
+        res.setBrandName(variant.getProduct().getBrand() != null ? variant.getProduct().getBrand().getName() : null);
+        res.setOriginalPrice(variant.getPrice());
+        res.setDiscountPrice(variant.getDiscountPrice());
         res.setDiscountPercent(variant.getDiscountPercent());
+
+        if (variant.getAttributeValues() != null) {
+            res.setAttributeValues(variant.getAttributeValues().stream().map(av -> {
+                ProductResponse.AttributeValueResponse avr = new ProductResponse.AttributeValueResponse();
+                avr.setName(av.getAttribute().getName());
+                avr.setValue(av.getValue());
+                return avr;
+            }).collect(Collectors.toList()));
+        }
 
         if (variant.getCostPrice() != null) {
             res.setProfit(variant.getProfit());
@@ -361,6 +419,41 @@ public class ProductService {
         }
 
         return res;
+    }
+
+    private void validatePrices(ProductRequest.VariantRequest vr) {
+        if (vr.getCostPrice() == null) {
+            throw new RuntimeException("Giá nhập không được để trống (SKU: " + vr.getSku() + ")");
+        }
+
+        // 1. Giá bán >= Giá nhập
+        if (vr.getPrice() != null && vr.getPrice().compareTo(vr.getCostPrice()) < 0) {
+            throw new RuntimeException(String.format(
+                "LỖI (SKU: %s): Giá bán (%.0f) không được nhỏ hơn giá nhập (%.0f)",
+                vr.getSku(), vr.getPrice().doubleValue(), vr.getCostPrice().doubleValue()));
+        }
+
+        // 2. Giá sale >= Giá nhập (nếu có sale)
+        if (vr.getDiscountPrice() != null && vr.getDiscountPrice().compareTo(vr.getCostPrice()) < 0) {
+            throw new RuntimeException(String.format(
+                "LỖI (SKU: %s): Giá sale (%.0f) không được nhỏ hơn giá nhập (%.0f)",
+                vr.getSku(), vr.getDiscountPrice().doubleValue(), vr.getCostPrice().doubleValue()));
+        }
+
+        // 3. Giá sale < Giá bán
+        if (vr.getDiscountPrice() != null && vr.getDiscountPrice().compareTo(vr.getPrice()) >= 0) {
+            throw new RuntimeException(String.format(
+                "LỖI (SKU: %s): Giá sale (%.0f) phải nhỏ hơn giá bán hiện tại (%.0f)",
+                vr.getSku(), vr.getDiscountPrice().doubleValue(), vr.getPrice().doubleValue()));
+        }
+
+        // 4. Giá gốc >= Giá bán
+        BigDecimal comparePrice = vr.getCompareAtPrice() != null ? vr.getCompareAtPrice() : vr.getPrice();
+        if (comparePrice != null && comparePrice.compareTo(vr.getPrice()) < 0) {
+            throw new RuntimeException(String.format(
+                "LỖI (SKU: %s): Giá gốc (%.0f) không được nhỏ hơn giá bán (%.0f)",
+                vr.getSku(), comparePrice.doubleValue(), vr.getPrice().doubleValue()));
+        }
     }
 
 }
